# fastapi-langgraph-rag-hexagonal

./: .ai-guidelines.md  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  rag-evaluation.yml  release.yml  security.yml
api-collections/: bruno.json  chat.bru  get-document.bru  health.bru  ingest-document.bru  list-documents.bru  livez.bru
docs/: 00-architecture-overview.md  01-hexagonal-architecture-in-python.md  02-rag-explained.md  03-langgraph-orchestration.md  04-testing-strategy.md  05-java-to-python-cheatsheet.md  06-threat-model.md  07-observability.md  08-bounded-context-ownership.md  09-pythonic-ports-and-adapters.md  10-evolution.md  11-advanced-exercises.md  12-quality-reference.md
docs/adr/: 0001-pgvector-as-vector-store.md  0002-langgraph-as-orchestration-adapter.md  0002-langgraph-in-application-layer.md  0003-hybrid-retrieval.md  0004-schema-bound-config-parity-guard.md  0005-short-transaction-ingest.md  README.md
evals/: README.md  baseline.json  dataset.json  live-baseline-qwen3.5-2b-q4_K_M.json  live-baseline-qwen3.5-9b.json  report.example.md
observability/: otel-collector.yaml
samples/: return-policy.md
src/knowledge_assistant/: __init__.py  bootstrap.py  config.py  container.py  main.py
src/knowledge_assistant/assistant/adapters/inbound/: __init__.py
src/knowledge_assistant/assistant/adapters/inbound/http/: mappers.py  router.py  schemas.py
src/knowledge_assistant/assistant/adapters/outbound/: __init__.py
src/knowledge_assistant/assistant/adapters/outbound/knowledge/: in_process.py
src/knowledge_assistant/assistant/adapters/outbound/llm/: pydantic_ai.py
src/knowledge_assistant/assistant/adapters/outbound/orchestration/: __init__.py
src/knowledge_assistant/assistant/application/: ask.py  policies.py  ports.py  service.py
src/knowledge_assistant/assistant/application/graph/: builder.py  nodes.py
src/knowledge_assistant/assistant/domain/: exceptions.py  models.py
src/knowledge_assistant/assistant/infrastructure/http/: mappers.py  router.py
src/knowledge_assistant/assistant/infrastructure/knowledge/: __init__.py  in_process.py
src/knowledge_assistant/assistant/infrastructure/llm/: pydantic_ai.py
src/knowledge_assistant/chat/application/: ports.py  service.py
src/knowledge_assistant/chat/application/graph/: builder.py  nodes.py  state.py
src/knowledge_assistant/chat/domain/: exceptions.py  models.py
src/knowledge_assistant/chat/infrastructure/http/: mappers.py  router.py  schemas.py
src/knowledge_assistant/chat/infrastructure/llm/: pydantic_ai.py
src/knowledge_assistant/chat/infrastructure/retrieval/: pgvector_hybrid.py
src/knowledge_assistant/documents/application/: ports.py  read_models.py  services.py
src/knowledge_assistant/documents/domain/: chunking.py  exceptions.py  models.py  value_objects.py
src/knowledge_assistant/documents/infrastructure/embeddings/: ollama.py  openai.py
src/knowledge_assistant/documents/infrastructure/extraction/: pdf.py
src/knowledge_assistant/documents/infrastructure/http/: mappers.py  router.py  schemas.py
src/knowledge_assistant/documents/infrastructure/persistence/: mappers.py  repository.py
src/knowledge_assistant/evaluation/: __init__.py  metrics.py  runner.py
src/knowledge_assistant/knowledge_base/adapters/inbound/: __init__.py
src/knowledge_assistant/knowledge_base/adapters/inbound/http/: mappers.py  router.py
src/knowledge_assistant/knowledge_base/adapters/outbound/: __init__.py
src/knowledge_assistant/knowledge_base/adapters/outbound/embeddings/: ollama.py  openai.py
src/knowledge_assistant/knowledge_base/adapters/outbound/extraction/: pdf.py  plain_text.py
src/knowledge_assistant/knowledge_base/adapters/outbound/persistence/: mappers.py  models.py  (+1 more)
src/knowledge_assistant/knowledge_base/application/: exceptions.py  ingest.py  ports.py  queries.py  read_models.py  retrieval.py  services.py
src/knowledge_assistant/knowledge_base/domain/: chunking.py  exceptions.py  models.py  value_objects.py
src/knowledge_assistant/knowledge_base/infrastructure/extraction/: plain_text.py
src/knowledge_assistant/knowledge_base/infrastructure/http/: mappers.py  router.py
src/knowledge_assistant/knowledge_base/infrastructure/persistence/: mappers.py  repository.py
src/knowledge_assistant/knowledge_base/infrastructure/retrieval/: pgvector_hybrid.py
src/knowledge_assistant/platform/database/: __init__.py  schema_meta.py
src/knowledge_assistant/platform/database/migrations/: env.py
src/knowledge_assistant/platform/http/: __init__.py  error_handlers.py  middleware.py
src/knowledge_assistant/platform/observability/: __init__.py  telemetry.py
src/knowledge_assistant/shared/application/: ports.py
src/knowledge_assistant/shared/domain/: exceptions.py  value_objects.py
src/knowledge_assistant/shared/infrastructure/: database.py  error_handlers.py  http_resilience.py  logging.py
src/knowledge_assistant/shared/infrastructure/migrations/: env.py
src/knowledge_assistant/shared_kernel/: exceptions.py  value_objects.py
tests/: conftest.py
tests/architecture/: test_import_contracts.py  test_naming_conventions.py
tests/e2e/: conftest.py  test_api_flow.py
tests/evals/: __init__.py  test_dataset.py  test_metrics.py
tests/integration/: conftest.py  test_chat_retrieval_scope.py  test_hybrid_retriever.py  test_multilingual_fts.py  test_repository.py  test_schema_meta.py
tests/unit/: fakes.py  test_ai_adapters.py  test_bootstrap.py  test_chat_graph.py  test_chunking.py  test_container.py  test_document_services.py  test_error_handlers.py  test_extraction_adapters.py  test_fts_query.py  test_http_content_safety.py  test_http_mappers.py  test_http_resilience.py  test_knowledge_bridge.py  test_persistence_mappers.py  test_repository_outage.py  test_retriever_errors.py  test_schema_meta.py  test_telemetry.py  test_value_objects.py
(+9 files in other folders)
