[project]
name = "fastapi-langgraph-rag-hexagonal"
version = "1.0.0"
description = "A didactic, production-shaped RAG API: FastAPI + LangGraph + PostgreSQL/pgvector, built with hexagonal architecture (ports & adapters)."
readme = "README.md"
license = "MIT"
authors = [{ name = "Victor Martin", email = "victormartingil@gmail.com" }]
requires-python = ">=3.12,<3.15"
dependencies = [
    "fastapi>=0.139,<1",
    "uvicorn[standard]>=0.38,<1",
    "pydantic>=2.12,<3",
    "pydantic-settings>=2.12,<3",
    "langgraph>=1.2,<2",
    "pydantic-ai-slim[openai]>=2.17,<3",
    "sqlalchemy[asyncio]>=2.0.51,<3",
    "asyncpg>=0.30,<1",
    "pgvector>=0.5,<1",
    "alembic>=1.17,<2",
    "httpx>=0.28,<1",
    "structlog>=26,<27",
    "tenacity>=9,<10",
    "pypdf>=6,<7",
    "python-multipart>=0.0.20,<1",
    "python-dotenv>=1,<2",
    "opentelemetry-api>=1.44,<2",
    "opentelemetry-sdk>=1.44,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.44,<2",
    "opentelemetry-instrumentation-fastapi>=0.65b0,<1",
    "opentelemetry-instrumentation-httpx>=0.65b0,<1",
    "opentelemetry-instrumentation-sqlalchemy>=0.65b0,<1",
]

[dependency-groups]
dev = [
    "pytest>=8,<10",
    "pytest-asyncio>=0.26,<2",
    "pytest-cov>=6,<8",
    "testcontainers[postgres]>=4.14.2,<5",
    "respx>=0.22,<1",
    "ruff>=0.16,<1",
    "mypy>=2.3,<3",
    "import-linter>=2.4,<3",
    "pre-commit>=4,<5",
    "pip-audit>=2.9,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/knowledge_assistant"]

# ---------------------------------------------------------------------------
# Ruff: linter + formatter (replaces black, isort, flake8 and several plugins)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "C4",    # flake8-comprehensions
    "RET",   # flake8-return
    "RUF",   # ruff-specific rules
    "ASYNC", # flake8-async
    "PT",    # flake8-pytest-style
    "PTH",   # flake8-use-pathlib
    "ANN",   # flake8-annotations (type hints everywhere)
]
ignore = [
    "ANN401", # `Any` is occasionally the honest type at system boundaries
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]   # tests prioritize readability over annotation noise
"**/migrations/**" = ["ANN", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["knowledge_assistant"]

# ---------------------------------------------------------------------------
# mypy --strict: the strictest practical type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
mypy_path = "src"
strict = true
warn_unreachable = true

# Third-party libraries without type information get a targeted, documented
# exemption instead of silently weakening the whole project.
[[tool.mypy.overrides]]
module = ["pypdf.*", "testcontainers.*"]
ignore_missing_imports = true

# Tests are type-checked too (the fakes implement the port Protocols, so a
# port change must break the fakes). Only the two "every def needs full
# annotations" rules are relaxed: pytest style favors readable, unannotated
# test functions, and everything they *call* is still checked.
[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["--import-mode=importlib"]
markers = [
    "integration: tests that need Docker (testcontainers, real PostgreSQL+pgvector)",
    "e2e: full HTTP round-trip tests that need Docker (testcontainers)",
    "eval: deterministic tests for datasets, metrics, and regression thresholds",
]

# ---------------------------------------------------------------------------
# Coverage
#
# The 80% gate is applied to the *unit-testable* part of the codebase:
# domain + application. Infrastructure adapters (SQL, HTTP clients, LLM SDKs)
# are covered by integration/e2e tests against real infrastructure, so they
# are excluded here — measuring them with fakes would be theater.
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src/knowledge_assistant"]
omit = [
    "src/knowledge_assistant/*/adapters/*",
    "src/knowledge_assistant/platform/*",
    "src/knowledge_assistant/evaluation/*",
    "src/knowledge_assistant/main.py",
    "src/knowledge_assistant/bootstrap.py",
    "src/knowledge_assistant/config.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
]

# ---------------------------------------------------------------------------
# import-linter: executable architecture tests.
# These contracts *are* the hexagonal architecture rules, enforced in CI.
# ---------------------------------------------------------------------------
[tool.importlinter]
root_package = "knowledge_assistant"
include_external_packages = true

# Within each bounded context, dependencies may only point INWARD:
# adapters -> application -> domain. (Layers are listed highest first;
# a layer may not import any layer listed above it.)
[[tool.importlinter.contracts]]
name = "Knowledge-base context: hexagonal layers (adapters -> application -> domain)"
type = "layers"
layers = [
    "knowledge_assistant.knowledge_base.adapters",
    "knowledge_assistant.knowledge_base.application",
    "knowledge_assistant.knowledge_base.domain",
]

[[tool.importlinter.contracts]]
name = "Assistant context: hexagonal layers (adapters -> application -> domain)"
type = "layers"
layers = [
    "knowledge_assistant.assistant.adapters",
    "knowledge_assistant.assistant.application",
    "knowledge_assistant.assistant.domain",
]

# Bounded contexts must not depend on each other's internals. The assistant
# reaches the knowledge base through one explicit in-process adapter and its
# public application use case; replacing that adapter with HTTP or messaging
# does not change either context's domain.
#
# The `ignore_imports` below are the single sanctioned exception: HTTP
# adapters import the COMPOSITION ROOT to obtain their use cases via Depends
# (that is what a composition root is for). What remains forbidden is any
# direct context -> context import of domain, application or adapter code.
[[tool.importlinter.contracts]]
name = "Knowledge-base context must not depend on the assistant context"
type = "forbidden"
source_modules = ["knowledge_assistant.knowledge_base"]
forbidden_modules = ["knowledge_assistant.assistant"]
ignore_imports = [
    "knowledge_assistant.knowledge_base.adapters.inbound.http.router -> knowledge_assistant.bootstrap",
]

[[tool.importlinter.contracts]]
name = "Assistant context must not depend on the knowledge-base context"
type = "forbidden"
source_modules = ["knowledge_assistant.assistant"]
forbidden_modules = ["knowledge_assistant.knowledge_base"]
ignore_imports = [
    "knowledge_assistant.assistant.adapters.inbound.http.router -> knowledge_assistant.bootstrap",
    "knowledge_assistant.assistant.adapters.outbound.knowledge.in_process -> knowledge_assistant.knowledge_base.application.exceptions",
    "knowledge_assistant.assistant.adapters.outbound.knowledge.in_process -> knowledge_assistant.knowledge_base.application.queries",
    "knowledge_assistant.assistant.adapters.outbound.knowledge.in_process -> knowledge_assistant.knowledge_base.application.retrieval",
]

# The domain is PURE: no frameworks, no I/O, no vendors. If this contract
# fails, someone coupled business rules to infrastructure.
[[tool.importlinter.contracts]]
name = "Domain layers stay pure (no framework or I/O imports)"
type = "forbidden"
source_modules = [
    "knowledge_assistant.knowledge_base.domain",
    "knowledge_assistant.assistant.domain",
    "knowledge_assistant.shared_kernel",
]
forbidden_modules = [
    "fastapi",
    "starlette",
    "pydantic",
    "pydantic_settings",
    "sqlalchemy",
    "alembic",
    "pgvector",
    "langgraph",
    "pydantic_ai",
    "httpx",
    "structlog",
    "tenacity",
    "pypdf",
]
ignore_imports = []

[[tool.importlinter.contracts]]
name = "Domain and application do not depend on adapters or platform"
type = "forbidden"
source_modules = [
    "knowledge_assistant.knowledge_base.domain",
    "knowledge_assistant.knowledge_base.application",
    "knowledge_assistant.assistant.domain",
    "knowledge_assistant.assistant.application",
    "knowledge_assistant.shared_kernel",
]
forbidden_modules = [
    "knowledge_assistant.knowledge_base.adapters",
    "knowledge_assistant.assistant.adapters",
    "knowledge_assistant.platform",
]
ignore_imports = []

[[tool.importlinter.contracts]]
name = "Application layers are independent of web, persistence, AI, and telemetry frameworks"
type = "forbidden"
source_modules = [
    "knowledge_assistant.knowledge_base.application",
    "knowledge_assistant.assistant.application",
]
forbidden_modules = [
    "fastapi",
    "pydantic",
    "pydantic_settings",
    "sqlalchemy",
    "langgraph",
    "pydantic_ai",
    "httpx",
    "opentelemetry",
]
ignore_imports = []
